--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <nav id="main-navbar">
     <div class="container">
-      <a href="#">
+      <a href="#" class="logo">
         <img src="img/logo.png" class="logo" alt="NewsGrid Logo">
       </a>
       <div class="social">
@@ -126,9 +126,9 @@
       <div class="contact">
         <h3>EMAIL NEWSLETTER</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-        <form action="">
+        <form name="contact" method="POST" data-netlify="true">
           <input type="email" placeholder="Enter Email..." />
-          <button class="btn btn-primary">Subscribe</button>
+          <input type="submit" value="Subscribe" class="btn btn-primary">
         </form>
       </div>
       <div class="site-links">
