--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
         <h3>EMAIL NEWSLETTER</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
         <form name="contact" method="POST" data-netlify="true">
-          <input type="email" placeholder="Enter Email..." />
+          <input type="email" name="email" placeholder="Enter Email..." />
           <input type="submit" value="Subscribe" class="btn btn-primary">
         </form>
       </div>
